# firmware

./: .gitmodules  CMakeLists.txt  firmware.ino  readme.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  blufi.h  blufi_example.h  blufi_example_main.c  blufi_init.c  blufi_init.h  blufi_main.c  blufi_main.h  blufi_security.c  blufi_security.h  gaia.c  gaia.h  main.c
